--- a/app.yml
+++ b/app.yml
@@ -6,10 +6,21 @@ datastore:
   db: krsdb
   schema: public
 
+kafka:
+  host: 172.16.1.141
+  port: 9092
+  cluster: false
+  enable: false
+
 app:
   debug: true
   host: 0.0.0.0
   port: 39001
+
+auth:
+  debug: true
+  host: 0.0.0.0
+  port: 39002
 
 key:
   key_size: 4096
